--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>simeng</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="images/1.png" type="images/x-icon">
+    <link:fav></link:fav>
 </head>
 <body>
     
