--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>simeng</title>
+    <link rel="stylesheet" href="css/hover.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="images/1.png" type="images/x-icon">
+    <link rel="shortcut icon" href="images/1.png" type="image/x-icon">
     <link:fav></link:fav>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
-    
+    <h1>hello</h1>
+    <div class="container">
+        <ul>
+            <li><a href=""><i class="fa fa-car"></i></a></li>
+            <li><a href=""><i class="material-icons"></i></a></li>
+            <li><a href="">Shopping</a></li>
+            <li><a href="">Book</a></li>
+            <li><a href="">resturant</a></li>
+        </ul>
+    </div>
+    <button class="hvr-bounce-in">hello</button>
 </body>
 </html>
