--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
     <div class="container">
         <ul>
             <li><a href=""><i class="fa fa-car"></i></a></li>
-            <li><a href=""><i class="material-icons"></i></a></li>
-            <li><a href="">Shopping</a></li>
-            <li><a href="">Book</a></li>
-            <li><a href="">resturant</a></li>
+            <li><a href=""><i class="fa fa-thumbs-o-up"></i></a></li>
+            <li><a href=""><i class="fa fa-check-square"></i></i></a></li>
         </ul>
     </div>
     <button class="hvr-bounce-in">hello</button>
