--- a/index.html
+++ b/index.html
@@ -9,17 +9,30 @@
     <link rel="shortcut icon" href="images/1.png" type="image/x-icon">
     <link:fav></link:fav>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
 </head>
 <body>
-    <h1>hello</h1>
-    <div class="container">
-        <ul>
-            <li><a href=""><i class="fa fa-car"></i></a></li>
-            <li><a href=""><i class="fa fa-thumbs-o-up"></i></a></li>
-            <li><a href=""><i class="fa fa-check-square"></i></i></a></li>
-        </ul>
-    </div>
-    <button class="hvr-bounce-in">hello</button>
+    <header class="site-header">
+        <nav>
+            <div class="logo">
+                <h1>MY NAME IS SIMENG</h1>
+            </div>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About me</a></li>
+                <li><a href="">Experience</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
+    <section>
+        <div class="leftside">
+            <img src="images/4.jpg">
+        </div>
+        <div class="rightside">
+            <h1>hello all beloved</h1>
+            <p>we are the best website</p>
+            <button>Wellcome</button>
+        </div>
+    </section>
+    </header>
 </body>
 </html>
