--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>simeng</title>
-    <link rel="stylesheet" href="css/hover.css">
-    <link rel="stylesheet" href="css/main.css">
+    <title>home</title>
+    <link rel="stylesheet" href="../css/home.css">
     <link rel="shortcut icon" href="images/1.png" type="image/x-icon">
     <link:fav></link:fav>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -17,10 +16,10 @@
                 <h1>MY NAME IS SIMENG</h1>
             </div>
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About me</a></li>
-                <li><a href="">Experience</a></li>
-                <li><a href="">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about/index.html">About me</a></li>
+                <li><a href="experience/index.html">Experience</a></li>
+                <li><a href="pages/contact.html">Contact</a></li>
             </ul>
         </nav>
     <section>
