--- a/pages/about.html
+++ b/pages/about.html
@@ -23,12 +23,11 @@
             </ul>
         </nav>
     </header>
-    <h2>About</h1><br>
-    <h3> Personal information:</h3><br>
-    <div class="information">
-        <p>A young, determined hard and smart working person. I believe in task based roles and complete ownership of work.</p><br>
-        <p>Languages: Englsih, Khmer</p><br>
-        <p>Hobbies: I love reading book,listening music, searching new technology play tennis ect.</p>
+    <div class="body"><br>
+        <h2>About</h2><br>
+        <p>Present: Study associate degree in IT information Technology at Passerelles Numeriques Cambodia(PNC)Lorem ipsum dolor sit amet, consectetur adipisicing elit. A suscipit incidunt, dicta provident ipsum illum tempora et fugiat ab maiores molestias nisi aliquam delectus facilis doloremque eum sequi beatae dolor?
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus architecto fugiat ullam dolores voluptates accusamus aut ipsum, sapiente voluptatum error. Saepe temporibus, tempora nemo tenetur ipsum in libero quas vero.
+        </p>
     </div>
     <footer>
         <p>&copy; MADE BY SIMENG HUOT</p>
@@ -37,10 +36,10 @@
                 <div class="col-12">     
                     <p class="text-success"> <b>Email:</b>simeng.huot@student.passerellesnumeriques.org</p>
                     <p class="text-success"> <b>Tel:</b> 0978011966</p>
-                    <i class="fa fa-facebook-square" style="font-size:25px;color:"#64b5f6"></i>
+                    <i class="fa fa-facebook-square" style="font-size:25px;color:#64b5f6"></i>
                     <i class="fa fa-instagram" style="font-size:25px;color:#e53935"></i>
-                    <i class="fa fa-telegram" style="font-size:25px;color:"#64b5f6"></i>
-                    <i class="fa fa-skype" style="font-size:25px;color:"#1e88e5"></i>
+                    <i class="fa fa-telegram" style="font-size:25px;color:#64b5f6"></i>
+                    <i class="fa fa-skype" style="font-size:25px;color:#1e88e5"></i>
                 </div>
             </div>
         </div>
