--- a/pages/contact.html
+++ b/pages/contact.html
@@ -22,29 +22,25 @@
                 </ul>
             </nav>
         </header>
-        <h2>Contact</h2>
+        <h2>Contact</h2><br><br>
         <div class="cotact">
             <div class="text">
-                <div class="con">
+                <div class="con" style="font-size:25px; color:#64b5f6">
                     <p>Phnom Penh, Cambodia<br></p><br>
-                    <i class="fa fa-phone" style="font-size:25px;color:"#64b5f6">999-7777-000</i><br><br>
-                    <i class="fa fa-envelope" style="font-size:25px;color:"#64b5f6">simeng.huot@2021.com</i>
+                    <i class="fa fa-phone" style="font-size:25px;color:#64b5f6">999-7777-000</i><br><br>
+                    <i class="fa fa-envelope" style="font-size:25px;color:#64b5f6">simeng.huot@2021.com</i><br><br>
                 </div>
             </div>
         </div>
-    <form>
-        <div class="container">
+        <div class="contain">
             <input type="name" placeholder="Username">
             <input type="number" placeholder="Phone"><br><br>
             <input type="email" placeholder="Email"><br><br>
             <textarea name="message" placeholder="Message"></textarea><br><br>
             <input type="submit" value="Contact">
         </div>
-    </form><br><br>
-    <div class="card">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3909.0139081695015!2d104.88308360000003!3d11.550859800000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x310951add5e2cd81%3A0x171e0b69c7c6f7ba!2sPasserelles+num%C3%A9riques+Cambodia+(PNC)!5e0!3m2!1sen!2skh!4v1554366688167!5m2!1sen!2skh"
             width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </div>
     <footer>
         <p>&copy; MADE BY SIMENG HUOT</p>
         <div class="container"></div>
@@ -52,10 +48,10 @@
                 <div class="col-12">     
                     <p class="text-success"> <b>Email:</b>simeng.huot@student.passerellesnumeriques.org</p>
                     <p class="text-success"> <b>Tel:</b> 0978011966</p>
-                    <i class="fa fa-facebook-square" style="font-size:25px;color:"#64b5f6"></i>
+                    <i class="fa fa-facebook-square" style="font-size:25px;color:#64b5f6"></i>
                     <i class="fa fa-instagram" style="font-size:25px;color:#e53935"></i>
-                    <i class="fa fa-telegram" style="font-size:25px;color:"#64b5f6"></i>
-                    <i class="fa fa-skype" style="font-size:25px;color:"#1e88e5"></i>
+                    <i class="fa fa-telegram" style="font-size:25px;color:#64b5f6"></i>
+                    <i class="fa fa-skype" style="font-size:25px;color:#1e88e5"></i>
                 </div>
             </div>
         </div>
