--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about/index.html">About me</a></li>
-                <li><a href="experience/index.html">Experience</a></li>
-                <li><a href="pages/contact.html">Contact</a></li>
+                <li><a href="/pages/about.html">About me</a></li>
+                <li><a href="/pages/experience.html">Experience</a></li>
+                <li><a href="/pages/contact.html">Contact</a></li>
             </ul>
         </nav>
     <section>
