--- a/pages/experience.html
+++ b/pages/experience.html
@@ -16,40 +16,41 @@
             </div>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-            <li><a href="about.html">About me</a></li>
-            <li><a href="experience.html">Experience</a></li>
-            <li><a href="contact.html">Contact</a></li>
+                <li><a href="about.html">About me</a></li>
+                <li><a href="experience.html">Experience</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
     <h2>Experience</h1><br><br>
-    <h3>Personal Experience</h3><br>
-    <div class="experience">
-        <p>October 28,2020-November 11, 2020: Virtual Company I</p><br>
-        <p>Read requirement, discuss with group, design logo,design leaflet, build home page and combine code.</p><br>
-    </div>
-    <h3>Soft Skills</h3><br>
-    <div class="softskills">
-        <p>Team work, task management, work hard, respect, problem solving and communication.</p>
-    </div>
-    <h3>Hard Skills</h3>
-    <div class="hardskills">
-        <p>HTML and CSS(navgation, footer,ctc)</p><br>
-        <p>Python</p><br>
-        <p>Design(Photoshop)</p>
-    </div>
-    <button class="btn" ><i class="fa fa-download"></i> Download</button>
-    <footer>
-        <p>&copy; MADE BY SIMENG HUOT</p>
+        <div class="container">
+            <div class="content-body">
+                <div class="main-box">
+                    <div class="box">Personal Experience</div>
+                    <div class="text">October 28,2020-November 11,2020:Virtual Company I<br>Read requirement,discuss with group, design logo, design leaflet, build home page and combine code.</div>
+                </div>
+                <div class="main-box">
+                    <div class="box">Soft Skills</div>
+                    <div class="text">Team work, task management, work hard, respect, problem solving and communication.</div>
+                </div>
+                <div class="main-box">
+                    <div class="box">Hard Skills</div>
+                    <div class="text">HTML AND CSS(navgation, footer, etc)<br>Python<br>Design(Photoshop)</div>
+                </div>
+            </div>
+        </div>
+        <button class="btn"><a class="fa fa-download" href="/images/CV.pdf" download style="widows: 100px; padding: 10px;"> Download</a></button>
+        <footer>
+        <p>&copy;MADE BY SIMENG HUOT</p>
         <div class="container"></div>
             <div class="row text-center">
-                <div class="col-12">     >
+                <div class="col-12">     
                     <p class="text-success"> <b>Email:</b>simeng.huot@student.passerellesnumeriques.org</p>
                     <p class="text-success"> <b>Tel:</b> 0978011966</p>
-                    <i class="fa fa-facebook-square" style="font-size:25px;color:"#64b5f6"></i>
+                    <i class="fa fa-facebook-square" style="font-size:25px;color:#64b5f6"></i>
                     <i class="fa fa-instagram" style="font-size:25px;color:#e53935"></i>
-                    <i class="fa fa-telegram" style="font-size:25px;color:"#64b5f6"></i>
-                    <i class="fa fa-skype" style="font-size:25px;color:"#1e88e5"></i>
+                    <i class="fa fa-telegram" style="font-size:25px;color:#64b5f6"></i>
+                    <i class="fa fa-skype" style="font-size:25px;color:#1e88e5"></i>
                 </div>
             </div>
         </div>
