--- a/index.html
+++ b/index.html
@@ -22,16 +22,18 @@
                 <li><a href="/pages/contact.html">Contact</a></li>
             </ul>
         </nav>
-    <section>
         <div class="leftside">
-            <img src="images/4.jpg">
+            <div class="image">
+            
+            </div>
+            <section>
+                <div class="rightside">
+                    <h1>hello all beloved</h1>
+                    <p>we are the best website</p>
+                    <button>Wellcome</button>
+                </div>
+            </section>
         </div>
-        <div class="rightside">
-            <h1>hello all beloved</h1>
-            <p>we are the best website</p>
-            <button>Wellcome</button>
-        </div>
-    </section>
     </header>
 </body>
 </html>
