--- a/pages/about.html
+++ b/pages/about.html
@@ -30,16 +30,16 @@
         </p>
     </div>
     <footer>
-        <p>&copy; MADE BY SIMENG HUOT</p>
         <div class="container"></div>
+            <p style="font-size: 20px;">&copy; MADE BY SIMENG HUOT</p>
             <div class="row text-center">
                 <div class="col-12">     
-                    <p class="text-success"> <b>Email:</b>simeng.huot@student.passerellesnumeriques.org</p>
-                    <p class="text-success"> <b>Tel:</b> 0978011966</p>
-                    <i class="fa fa-facebook-square" style="font-size:25px;color:#64b5f6"></i>
-                    <i class="fa fa-instagram" style="font-size:25px;color:#e53935"></i>
-                    <i class="fa fa-telegram" style="font-size:25px;color:#64b5f6"></i>
-                    <i class="fa fa-skype" style="font-size:25px;color:#1e88e5"></i>
+                    <p class="text-success" style="font-size: 18px;"> <b>Email:</b>simeng.huot@student.passerellesnumeriques.org</p>
+                    <p class="text-success" style="font-size: 18px;"> <b>Tel:</b> 0716335412</p>
+                    <a href="https://www.facebook.com/login/"><i class="fa fa-facebook-square" style="font-size:25px;color:#64b5f6"></i>
+                    <a href="https://www.instagram.com/accounts/login/?"><i class="fa fa-instagram" style="font-size:25px;color:#e53935"></i>
+                    <a href="https://web.telegram.org/#/login"><i class="fa fa-telegram" style="font-size:25px;color:#64b5f6"></i>
+                    <a href="https://www.skype.com/en/"><i class="fa fa-skype" style="font-size:25px;color:#1e88e5"></i></a>
                 </div>
             </div>
         </div>
