--- a/pages/contact.html
+++ b/pages/contact.html
@@ -22,7 +22,7 @@
                 </ul>
             </nav>
         </header>
-        <h2>Contact</h2><br><br>
+        <h2>Contact</h2>
         <div class="cotact">
             <div class="text">
                 <div class="con" style="font-size:25px; color:#64b5f6">
@@ -34,24 +34,24 @@
         </div>
         <div class="contain">
             <input type="name" placeholder="Username">
-            <input type="number" placeholder="Phone"><br><br>
-            <input type="email" placeholder="Email"><br><br>
-            <textarea name="message" placeholder="Message"></textarea><br><br>
+            <input type="number" placeholder="Phone">
+            <input type="email" placeholder="Email"><br>
+            <textarea name="message" placeholder="Message"></textarea><br>
             <input type="submit" value="Contact">
         </div>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3909.0139081695015!2d104.88308360000003!3d11.550859800000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x310951add5e2cd81%3A0x171e0b69c7c6f7ba!2sPasserelles+num%C3%A9riques+Cambodia+(PNC)!5e0!3m2!1sen!2skh!4v1554366688167!5m2!1sen!2skh"
-            width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+         frameborder="0" style="border:0" allowfullscreen></iframe>
     <footer>
-        <p>&copy; MADE BY SIMENG HUOT</p>
         <div class="container"></div>
+            <p>&copy; MADE BY SIMENG HUOT</p>
             <div class="row text-center">
                 <div class="col-12">     
-                    <p class="text-success"> <b>Email:</b>simeng.huot@student.passerellesnumeriques.org</p>
-                    <p class="text-success"> <b>Tel:</b> 0978011966</p>
-                    <i class="fa fa-facebook-square" style="font-size:25px;color:#64b5f6"></i>
-                    <i class="fa fa-instagram" style="font-size:25px;color:#e53935"></i>
-                    <i class="fa fa-telegram" style="font-size:25px;color:#64b5f6"></i>
-                    <i class="fa fa-skype" style="font-size:25px;color:#1e88e5"></i>
+                    <p class="text-success"><b>Email:</b>simeng.huot@student.passerellesnumeriques.org</p>
+                    <p class="text-success1"><b>Tel:</b> 0716335412</p>
+                    <a href="https://www.facebook.com/login/"><i class="fa fa-facebook-square" style="font-size:25px;color:#64b5f6"></i>
+                    <a href="https://www.instagram.com/accounts/login/?"><i class="fa fa-instagram" style="font-size:25px;color:#e53935"></i>
+                    <a href="https://web.telegram.org/#/login"><i class="fa fa-telegram" style="font-size:25px;color:#64b5f6"></i>
+                    <a href="https://www.skype.com/en/"><i class="fa fa-skype" style="font-size:25px;color:#1e88e5"></i>
                 </div>
             </div>
         </div>
