--- a/pages/experience.html
+++ b/pages/experience.html
@@ -22,9 +22,9 @@
             </ul>
         </nav>
     </header>
-    <h2>Experience</h1><br><br>
         <div class="container">
             <div class="content-body">
+                <h2>Experience</h2>
                 <div class="main-box">
                     <div class="box">Personal Experience</div>
                     <div class="text">October 28,2020-November 11,2020:Virtual Company I<br>Read requirement,discuss with group, design logo, design leaflet, build home page and combine code.</div>
@@ -38,19 +38,18 @@
                     <div class="text">HTML AND CSS(navgation, footer, etc)<br>Python<br>Design(Photoshop)</div>
                 </div>
             </div>
+            <button class="btn"><a class="fa fa-download" href="/images/CV.pdf" download style="widows: 100px; padding: 10px;"> Download</a></button>
         </div>
-        <button class="btn"><a class="fa fa-download" href="/images/CV.pdf" download style="widows: 100px; padding: 10px;"> Download</a></button>
         <footer>
-        <p>&copy;MADE BY SIMENG HUOT</p>
-        <div class="container"></div>
+            <p>&copy;MADE BY SIMENG HUOT</p>
             <div class="row text-center">
                 <div class="col-12">     
                     <p class="text-success"> <b>Email:</b>simeng.huot@student.passerellesnumeriques.org</p>
-                    <p class="text-success"> <b>Tel:</b> 0978011966</p>
-                    <i class="fa fa-facebook-square" style="font-size:25px;color:#64b5f6"></i>
-                    <i class="fa fa-instagram" style="font-size:25px;color:#e53935"></i>
-                    <i class="fa fa-telegram" style="font-size:25px;color:#64b5f6"></i>
-                    <i class="fa fa-skype" style="font-size:25px;color:#1e88e5"></i>
+                    <p class="text-success"> <b>Tel:</b> 0716335412</p>
+                    <a href="https://www.facebook.com/login/"><i class="fa fa-facebook-square" style="font-size:25px;color:#64b5f6"></i>
+                    <a href="https://www.instagram.com/accounts/login/?"><i class="fa fa-instagram" style="font-size:25px;color:#e53935"></i>
+                    <a href="https://web.telegram.org/#/login"><i class="fa fa-telegram" style="font-size:25px;color:#64b5f6"></i>
+                    <a href="https://www.skype.com/en/"><i class="fa fa-skype" style="font-size:25px;color:#1e88e5"></i>
                 </div>
             </div>
         </div>
